Fixed overflow with align start property

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -217,6 +217,7 @@ footer a {
 
 .cards-container {
   display: grid;
+  align-items: start;
   gap: 100px;
 
   margin: 0 10px 0 53px;
